<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true">

    <include layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_parent">

        <LinearLayout
            android:id="@+id/ll_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:visibility="visible">


            <TextView
                style="@style/style_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/day_end_closing"
                android:textColor="@color/white"
                android:visibility="gone" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_reprint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/reprint"
                android:textColor="@color/white"
                android:theme="@style/Color1SwitchStyle"
                app:thumbTint="#FFFFFF" />

            <TextView
                android:id="@+id/tv_today_date"
                style="@style/style_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_activity"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/date"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/style_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/transparent"
                android:paddingStart="5dp"
                android:text="Select Ride Name"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:visibility="visible" />

            <Spinner
                android:id="@+id/spinner_mini_golf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

            <LinearLayout
                android:id="@+id/ll_reprint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <Spinner
                    android:id="@+id/spinner_ride_name"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />


                <TextView
                    android:id="@+id/tv_petty_title"
                    style="@style/style_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/transparent"
                    android:paddingStart="5dp"
                    android:text="@string/petty_cash"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/et_petty_cash"
                    style="@style/style_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/white"
                    android:editable="false"
                    android:imeOptions="actionNext"
                    android:inputType="none"
                    android:text="@string/_0"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <TextView
                    android:id="@+id/tv_today_cash_amount_title"
                    style="@style/style_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/transparent"
                    android:paddingStart="5dp"
                    android:text="@string/today_cash_amount"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/et_cash_amount"
                    style="@style/style_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/white"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <TextView
                    android:id="@+id/tv_total_card_amount_cash"
                    style="@style/style_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/transparent"
                    android:paddingStart="5dp"
                    android:text="@string/total_card_amount"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/et_card_amount"
                    style="@style/style_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/white"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <TextView
                    android:id="@+id/tv_total_debit_amount"
                    style="@style/style_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/transparent"
                    android:paddingStart="5dp"
                    android:text="@string/total_debit_amount"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/et_debit_amount"
                    style="@style/style_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/white"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>


            <CheckBox
                android:id="@+id/cb_cash_deposit"
                style="@style/style_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/cash_deposit" />

            <android.widget.Button
                android:id="@+id/btn_update_info"
                style="@style/style_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/item_btn_main"
                android:text="@string/update_info"
                android:textAllCaps="false"
                android:textColor="@color/orange_color" />


            <ImageView
                android:id="@+id/iv_logo_booket"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_logo_new"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_print" />

            <TextView
                android:id="@+id/tv_ticketing"
                style="@style/style_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:text="@string/ticketing_partner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo_booket" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>