<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:clipToPadding="false"
    android:fillViewport="true"
    tools:context=".activities.Login">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
       >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/iv_logo_booket"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/eee_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/et_username"
                style="@style/style_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/white"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

            <EditText
                android:id="@+id/et_password"
                style="@style/style_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/et_username" />

            <TextView
                android:id="@+id/tv_forgot_password"
                style="@style/style_regular"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:text="@string/forget_password"
                android:textSize="13sp"
                android:visibility="gone"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <android.widget.Button
                android:id="@+id/btn_next"
                style="@style/style_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/item_btn_main"
                android:onClick="login"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/orange_color"
                app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/iv_logo_booket"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_logo_new"
            app:layout_constraintBottom_toTopOf="@+id/tv_ticketing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_ticketing"
            style="@style/style_regular"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_vertical"
            android:text="@string/ticketing_partner"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>