<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:clipToPadding="false"
    android:fillViewport="true"
    tools:context=".activities.MainActivity">

    <include layout="@layout/layout_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:src="@drawable/eee_dark"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <AutoCompleteTextView
                android:id="@+id/spinner_mini_golf"
                style="@style/style_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_activity"
                android:drawableRight="@drawable/ic_arrow_drop_down"
                android:hint="@string/select_activity_str"
                android:maxLines="1"
                android:background="@color/transparent"
                android:backgroundTint="@color/transparent"
                android:padding="10dp"
                android:drawablePadding="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

            <TextView
                android:id="@+id/tv_slots"
                style="@style/style_regular"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:gravity="center_vertical"
                android:text="@string/slots"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_mini_golf" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_slots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_slots"
                tools:itemCount="1"
                tools:listitem="@layout/layout_simple_text" />

            <TextView
                android:id="@+id/tv_payment"
                style="@style/style_regular"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:gravity="center_vertical"
                android:text="@string/payment"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_slots" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_payment"
                tools:itemCount="1"
                tools:listitem="@layout/layout_simple_text" />

            <LinearLayout
                android:id="@+id/ll_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_slots">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:elevation="1dp"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tv_cash"
                        style="@style/style_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/orange_color"
                        android:paddingStart="10dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="4dp"
                        android:text="@string/cash"
                        android:textColor="@color/white"
                        android:textSize="13dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:elevation="1dp"
                    app:cardCornerRadius="5dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/tv_card"
                        style="@style/style_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="4dp"
                        android:text="@string/card"
                        android:textColor="@color/orange_color"
                        android:textSize="13dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_number_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/rv_payment">

                <TextView
                    android:id="@+id/tv_numb_of_tickets"
                    style="@style/style_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/no_of_tickets"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <NumberPicker
                    android:id="@+id/number_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:theme="@style/AppTheme.Picker"
                    app:layout_constraintEnd_toStartOf="@+id/iv_add"
                    app:layout_constraintStart_toEndOf="@id/tv_numb_of_tickets"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_baseline_add"
                    app:layout_constraintBottom_toTopOf="@+id/iv_minus"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/number_picker"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_remove"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/number_picker"
                    app:layout_constraintTop_toBottomOf="@+id/iv_add" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/et_phone"
                style="@style/style_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/cl_number_picker" />

            <EditText
                android:id="@+id/et_name"
                style="@style/style_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:hint="@string/name"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/et_phone" />

            <EditText
                android:id="@+id/et_email"
                style="@style/style_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/et_name" />


            <Spinner
                android:id="@+id/spinner_age"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />

            <Spinner
                android:id="@+id/spinner_gender"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_age" />

            <Spinner
                android:id="@+id/spinner_nationality"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:popupBackground="@drawable/brown_border_transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_gender" />

            <TextView
                android:id="@+id/tv_swipe_left"
                style="@style/style_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableRight="@drawable/ic_swipe_left"
                android:gravity="center_vertical"
                android:text="@string/swipe_left_to_remove_item"
                android:textSize="14dp"
                app:layout_constraintTop_toBottomOf="@+id/spinner_nationality" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_selected_ticket"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:nestedScrollingEnabled="true"
                app:layout_constraintHeight_max="200dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_swipe_left" />


            <LinearLayout
                android:id="@+id/ll_ticket_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_empty_rounded"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/rv_selected_ticket" />

            <android.widget.Button
                android:id="@+id/btn_print"
                style="@style/style_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/item_btn_main"
                android:text="@string/print"
                android:textAllCaps="false"
                android:textColor="@color/orange_color"
                app:layout_constraintTop_toBottomOf="@+id/ll_ticket_value" />

            <ImageView
                android:id="@+id/iv_logo_booket"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_logo_new"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_print" />

            <TextView
                android:id="@+id/tv_ticketing"
                style="@style/style_bold"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:text="@string/ticketing_partner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo_booket" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>